--- a/config/database.yml
+++ b/config/database.yml
@@ -1,8 +1,11 @@
 # SQLite version 3.x
 #   gem install sqlite3-ruby (not necessary on OS X Leopard)
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  database: rsig
+  username: magno
+  password: zwanzig
+  host: localhost
   timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
