--- a/config/database.yml
+++ b/config/database.yml
@@ -2,9 +2,9 @@
 #   gem install sqlite3-ruby (not necessary on OS X Leopard)
 development:
   adapter: postgresql
-  database: rsig
-  username: magno
-  password: zwanzig
+  database: rsig_development
+  username: postgres
+  password: postgres
   host: localhost
   timeout: 5000
 
