--- a/config/database.yml
+++ b/config/database.yml
@@ -1,10 +1,10 @@
 # SQLite version 3.x
 #   gem install sqlite3-ruby (not necessary on OS X Leopard)
 development:
-  adapter: postgresql
-  database: rsig_development
-  username: postgres
-  password: postgres
+  adapter: sqlite3 
+  database: db/development.sqlite3
+  username: magno
+  password: zwanzig
   host: localhost
   timeout: 5000
 
