--- a/config/database.yml
+++ b/config/database.yml
@@ -2,21 +2,25 @@
 #   gem install sqlite3-ruby (not necessary on OS X Leopard)
 development:
   adapter: postgresql
-  database: rsig_development
+  database: rsig
   username: postgres
   password: postgres
   host: localhost
-  timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  timeout: 5000
+  adapter: postgresql
+  database: rsig_test
+  username: postgres
+  password: postgres
+  host: localhost
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  timeout: 5000
+  adapter: postgresql
+  database: rsig_prod
+  username: postgres
+  password: postgres
+  host: localhost
+
